--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -2,7 +2,6 @@
 % LaTeX File
 % Daniel J. Greenhoe
 %============================================================================
-
 %======================================
 \chapter{Random Sequences}
 \label{app:random_processes}
@@ -149,12 +148,14 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    \pmeany(n)
      &\eqd \pE\brs{\rvy(n)}
      && \text{by definition of $\pmeany$}
+     && \text{\xref{def:pmeanxn}}
    \\&= \pE\brs{\sum_{k\in\Z} \fh(k) \rvx(n-k)}
      && \text{by \prope{LTI} hypothesis}
    \\&= \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(n-k)}
-     && \text{by \prope{linearity}}
+     && \text{by \prope{linear} property}
    \\&= \sum_{k\in\Z} \fh(k) \pmeanx(n-k)
      && \text{by definition of $\pmeanx$}
+     && \text{\xref{def:pmeanxn}}
    \\&\eqd \fh(n)\convd \pmeanx(n) 
      && \text{by definition of \ope{convolution}}
      && \text{\xref{def:dsp_conv}}
@@ -292,7 +293,7 @@ $\pmeanx(n)$, $\pvarx(n)$, $\Rxx(n,m)$, and $\Rxy(n,m)$ \xref{def:Rxynm}.
   \brb{\begin{array}{FMlMlc>{\ds}l}
      (1).&The \fnctd{mean}             & \pmeanx  & of $\rvx(n)$               is & \pmeanx &\eqd& \pE\brs{\rvx(0)}
    \\(2).&The \fnctd{variance}         & \pvarx   & of $\rvx(n)$               is & \pvarx  &\eqd& \pE\brp{\brs{\rvx(0)-\pmeanx}^2}
-   \\(4).&The \fnctd{cross-correlation} & \Rxy(m)  & of $\rvx(n)$ and $\rvy(n)$ is & \Rxy(m) &\eqd& \pE\brs{\rvx(n+m)\rvy^\ast(0)}
+   \\(4).&The \fnctd{cross-correlation} & \Rxy(m)  & of $\rvx(n)$ and $\rvy(n)$ is & \Rxy(m) &\eqd& \pE\brs{\rvx(m)\rvy^\ast(0)}
    \\(3).&The \fnctd{auto-correlation}  & \Rxx(m)  & of $\rvx(n)$               is & \Rxx(m) &\eqd& \brlr{\Rxy(m)}_{\rvy=\rvx}
   %\\The \fnctd{auto-correlation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u) f(u) \du     %& \text{(\prope{auto-correlation operator})}
 \end{array}}$
@@ -353,7 +354,6 @@ and $\Rxy$    the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
      && \text{by definition of $\Rxy(m)$}
      && \text{\xref{def:Rxym}}
    \\
-   \\
   \Rxx(n,m)
      &=    \brlr{\Rxy(n,m)}_{\rvy=\rvx}
    \\&=    \brlr{\Rxy(m)}_{\rvy=\rvx}
@@ -372,14 +372,14 @@ Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n
 and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \corbox{
-  \brb{\begin{array}{FMMD}
-      (A).&$\rvx$ and $\rvy$ are \prope{WSS} & \xref{def:wss} & and
-    \\(B).&$\opS$ is \prope{LTI}             &                &
+  \brb{\begin{array}{FMD}
+      (A).&$\rvx$ and $\rvy$ are \prope{WSS} & and
+    \\(B).&$\opS$ is \prope{LTI}             &
   \end{array}}
   \implies
-  \brb{\begin{array}{FrclDD}
-      (1).&\Rxx(m) &=& \Rxx^\ast(-m) & (\prope{conjugate symmetric}) & and
-    \\(2).&\Rxy(m) &=& \Ryx^\ast(-m) & (\prope{conjugate symmetric})
+  \brb{\begin{array}{Frc>{\ds}lDD}
+      (1).&\Rxx(m) &=& \Rxx^\ast(-m)               & (\prope{conjugate symmetric}) & and
+    \\(2).&\Rxy(m) &=& \Ryx^\ast(-m)               & (\prope{conjugate symmetric})
   \end{array}}
 }
 \end{corollary}
@@ -388,24 +388,24 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
   \Rxy(m)
      &= \Rxy(n,m)
      && \text{by \prefp{prop:Rxynmm}}
-     && \text{and (A)}
+     && \text{and hypothesis (A)}
    \\&= \Ryx^\ast(n+m,-m)
      && \text{by \prefp{thm:Rxynm}}
-     && \text{and (B)}
+     && \text{and hypothesis (B)}
    \\&= \Ryx^\ast(-m)
      && \text{by \prefp{prop:Rxynmm}}
-     && \text{and (A)}
+     && \text{and hypothesis (A)}
    \\
   \Rxx(m)
      &= \Rxx(n,m)
      && \text{by \prefp{prop:Rxynmm}}
-     && \text{and (A)}
+     && \text{and hypothesis (A)}
    \\&= \Rxx^\ast(n+m,-m)
      && \text{by \prefp{thm:Rxynm}}
-     && \text{and (B)}
+     && \text{and hypothesis (B)}
    \\&= \Rxx^\ast(-m)
      && \text{by \prefp{prop:Rxynmm}}
-     && \text{and (A)}
+     && \text{and hypothesis (A)}
 \end{align*}
 \end{proof}
 
@@ -441,6 +441,7 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \footnote{
   \citerp{papoulis}{323}
   }
+\label{cor:Rxyh}
 %---------------------------------------
 Let $\rvx(n)$ be a \fncte{random sequence} with \fncte{auto-correlation} $\Rxx(n,m)$,
     $\rvy(n)$    a \fncte{random sequence} with \fncte{auto-correlation} $\Ryy(n,m)$,
@@ -448,28 +449,47 @@ and $\Rxy(n,m)$  the \fncte{cross-correlation} of $\rvx$ and $\rvy$.
 Let $\opS$ be a \structe{system} with input $\rvx(n)$, output $\rvy(n)$, 
 and \fncte{impulse response} $\fh(n)$ \xref{fig:d-linear-sys-WSS}.
 \corbox{
-  \brb{\begin{array}{FMMD}
+  \brbr{\begin{array}{FMD}
       (A). & $\opS$    is \prope{LTI} & and
     \\(B). & $\rvx(n)$ is \prope{WSS} & and
     \\(C). & $\rvy(n)$ is \prope{WSS} &
   \end{array}}
   \implies
-  \brb{\begin{array}{Frc>{\ds}lc>{\ds}lD}
-       (1).&\Rxy(m) &=& \Rxx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)  & and
-     \\(2).&\Ryy(m) &=& \Ryx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxy(m+k)  & and
-     \\(3).&\Ryy(m) &=& \Rxx^\ast(m)\convd \fh(-m)\convd\fh(-m) %&\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
+  \brbl{\begin{array}{Frc>{\ds}lc>{\ds}lD}
+       (1).&\pmeany &=& \pmeanx\sum_{n\in\Z} \fh(k)          &    &                                      & and
+     \\(2).&\Rxy(m) &=& \Rxx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)  & and
+     \\(3).&\Ryy(m) &=& \Ryx(m)\convd \fh^\ast(-m)           &\eqd& \sum_{k\in\Z} \fh^\ast(k) \Rxy(m+k)  & and
+     \\(4).&\Ryy(m) &=& \mc{4}{l}{\ds\Rxx^\ast(m)\convd \fh(-m)\convd\fh^\ast(-m)} %&\eqd& \mc{2}{l}{\ds\sum_{p\in\Z}\sum_{k\in\Z}\fh(k)h^\ast(p) \Rxx(m-p-k)}
   \end{array}}
   }
 \end{corollary}
 \begin{proof}
 \begin{align*}
+  \pmeany 
+     &= \pmeany(n)
+     && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
+   \\&= \sum_{n\in\Z} \fh(k) \pmeanx(n-k)
+     && \text{by \prefp{thm:Rxynm}}
+     && \text{and hypothesis (B)}
+   \\&= \sum_{n\in\Z} \fh(k) \pmeanx(0)
+     && \text{by \prefp{def:wss}}
+     && \text{and hypothesis (B)}
+   \\&= \pmeanx(0) \sum_{n\in\Z} \fh(k) 
+     && \text{by \prope{linear} property of $\sum$}
+   \\&= \pmeanx \sum_{n\in\Z} \fh(k) 
+     && \text{by \prefp{prop:Rxynmm}}
+   \\
   \Rxy(m)
      &\eqd \Rxy(0,m)
      && \text{by \prefp{prop:Rxynmm}}
-   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(n-k,m+k)
+     && \text{and hypothesis (A)}
+   \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(0-k,m+k)
      && \text{by \prefp{thm:Rxyh}}
+     && \text{and hypothesis (B)}
    \\&= \sum_{k\in\Z} \fh^\ast(k) \Rxx(m+k)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
    \\&= \fh^\ast(-m) \convd\Rxx(m)
      && \text{by \prefp{prop:conv_knk}}
 \\
@@ -477,35 +497,47 @@ and \fncte{impulse response} $\fh(n)$ \xref{fig:d-linear-sys-WSS}.
   \Ryy(m)
      &\eqd \Ryy(0,m)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
    \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(n-k,m+k)
      && \text{by \prefp{thm:Rxyh}}
+     && \text{and hypothesis (B)}
    \\&= \sum_{k\in\Z} \fh^\ast(k) \Ryx(m+k)
      && \text{by \prefp{prop:Rxynmm}}
+     && \text{and hypothesis (A)}
    \\&= \fh^\ast(-m) \convd\Ryx(m)
      && \text{by \prefp{prop:conv_knk}}
 \\
 \\
   \Ryy(m)
      &= \fh^\ast(-m) \convd\Ryx(m)
+     && \text{by result (2)}
    \\&= \fh^\ast(-m) \convd\Rxy^\ast(m)
+     && \text{by \prefp{cor:Rxym}}
    \\&= \fh^\ast(-m) \convd\brs{\fh^\ast(-m) \convd\Rxx(m)}^\ast
+     && \text{by result (1)}
    \\&= \fh^\ast(-m) \convd\fh(-m) \convd\Rxx^\ast(m)
+      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
+      && \text{\xref{def:staralg}}
 \end{align*}
 \end{proof}
 
+
+%=======================================
+\section{Spectral density}
+%=======================================
 %---------------------------------------
 \begin{definition}
 \label{def:psd}
 \label{def:csd}
 \label{def:Swxy}
 %---------------------------------------
-Let $\rvx(n)$ and $\rvy(n)$ be a \prope{wide sense stationary} \fncte{random sequence}es
+Let $\rvx(n)$ and $\rvy(n)$ be a \prope{wide sense stationary} \fncte{random sequence}s
 with auto-correlation $\Rxx(m)$ and cross-correlation $\Rxy(m)$.
 Let $\opZ$ be the \ope{Z-transform operator}\ifsxref{dsp}{def:opZ}.
 \\
 \defbox{\begin{array}{MMrclcl}
-   The \opd{power spectral density} & (\opd{PSD}) of $\vx$ is           & \Sxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
-   The \opd{cross spectral density} & (\opd{CSD}) of $\vx$ and $\vy$ is & \Sxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
+   The \opd{power spectral density} & (\opd{PSD}) $\ZSxx(z)$ of $\vx$ is           & \ZSxx(z) &\eqd& \opZ{\Rxx(m)} &\eqd& \ds \sum_{m\in\Z} \Rxx(m) z^{-m}\\
+   The \opd{cross spectral density} & (\opd{CSD}) $\ZSxy(z)$ of $\vx$ and $\vy$ is & \ZSxy(z) &\eqd& \opZ{\Rxy(m)} &\eqd& \ds \sum_{m\in\Z} \Rxy(m) z^{-m}
 \end{array}}
 \end{definition}
 
@@ -524,43 +556,70 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
     (B).& \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
   \end{array}}
   \implies
-  \brb{\begin{array}{FrclD}
-       (1).&\Sxy(z) &=& \ds \Sxx(z) \Zh^\ast\brp{z^\ast} & and
-     \\(2).&\Syy(z) &=& \ds \Sxy(z) \Zh(z)               & and
-     \\(3).&\Syy(z) &=& \mc{2}{l}{\ds \Sxx(z) \Zh(z) \Zh^\ast\brp{z^\ast}}
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
+       (1).&\ZSyx(z) &=& \ZSxy^\ast\brp{\frac{1}{z^\ast}}             & and
+     \\(2).&\ZSxy(z) &=& \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(3).&\ZSyy(z) &=& \ZSxy(z) \Zh(z)                              & and
+     \\(4).&\ZSyy(z) &=& \ZSxx(z) \abs{\Zh\brp{\frac{1}{z^\ast}}}^2
   \end{array}}
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \Sxy(z)
+  \ZSyx(z)
+     &\eqd \opZ \Ryx(m)
+    && \text{by definition of $\Sxy(z)$}
+    && \text{\xref{def:csd}}
+  \\&\eqd \sum_{m\in\Z} Ryx(m) z^{-m}
+    && \text{by definition of $\opZ$}
+    && \text{\xref{def:opZ}}
+  \\&\eqd \sum_{m\in\Z} Rxy^\ast(-m) z^{-m}
+    && \text{by \prefp{cor:Rxym}}
+  \\&= \brs{\sum_{m\in\Z} Rxy(-m) (z^\ast)^{-m}}^\ast
+  \\&= \brs{\sum_{-p\in\Z} Rxy(p) (z^\ast)^{p}}^\ast
+  \\&= \brs{\sum_{p\in\Z} Rxy(p) (z^\ast)^{p}}^\ast
+  \\&= \brs{\sum_{p\in\Z} Rxy(p) \brp{\frac{1}{z^\ast}}^{-p}}^\ast
+  \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{thm:opZ}}
+   \\
+  \ZSxy(z)
      &\eqd \opZ \Rxy(m)
     && \text{by definition of $\Sxy(z)$}
     && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxx(m) \convd \fh^\ast(m)}
-    && \text{by \prefp{thm:Rxyh}}
-   \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(m)}
+   \\&= \opZ \brs{\Rxx(m) \convd \fh^\ast(-m)}
+    && \text{by \prefp{cor:Rxyh}}
+   \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(-m)}
     && \text{by \thme{convolution theorem}}
     && \text{\xref{thm:conv}}
-   \\&= \Sxx(z) \Zh^\ast\brp{z^\ast}
+   \\&= \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{thm:opZ}}
    \\
    \\
-  \Syy(z)
+  \ZSyy(z)
      &\eqd \opZ \Ryy(m)
     && \text{by definition of $\Syy(z)$}
     && \text{\xref{def:csd}}
-   \\&= \opZ \brs{\Rxy(m) \convd \fh(m)}
-    && \text{by \prefp{thm:Rxyh}}
-   \\&= \brs{\opZ\Rxy(m)}\,\opZ\brs{\fh(m)}
+   \\&= \opZ \brs{\Ryx(m) \convd \fh^\ast(-m)}
+    && \text{by \prefp{cor:Rxyh}}
+   \\&= \brs{\opZ\Ryx(m)}\,\opZ\brs{\fh^\ast(-m)}
     && \text{by \thme{convolution theorem}}
     && \text{\xref{thm:conv}}
-   \\&\eqd \Sxy(z) \Zh(z)
+   \\&\eqd \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
    \\
    \\
-  \Syy(z)
-     &= \Sxy(z) \Zh(z)
+  \ZSyy(z)
+     &= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
      && \text{by previous result}
-   \\&= \Sxx(z) \Zh^\ast\brp{z^\ast} \Zh(z)
+   \\&= \ZSxy^\ast(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by ???}
+   \\&= \brp{\ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}}^\ast  \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by (1)}
+   \\&= \ZSxx^\ast(z) \Zh\brp{\frac{1}{z^\ast}}  \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by (1)}
+   \\&= \ZSxx(z) \Zh\brp{\frac{1}{z^\ast}} \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by ???}
+   \\&= \ZSxx(z) \abs{\Zh\brp{\frac{1}{z^\ast}}}^2
+     && \text{by property of complex numbers}
 \end{align*}
 \end{proof}
 
@@ -651,311 +710,6 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \end{align*}
 \end{proof}
 
-%---------------------------------------
-\begin{remark}
-\label{rem:Rxym}
-%---------------------------------------
-In the literature, there are varying and in general incompatible definitions of
-\fncte{cross-correlation} functions $\Rxy(n,m)$ and $\Rxy(m)$ \xxref{def:Rxynm}{def:Rxym}.
-The choice of definitions has consequences for results involving $\Swxy$ \xref{cor:Swxy}.
-Here is a very limited overview:
-\\\indentx$\begin{array}{>{\qquad}cNM>{\ds}rc>{\ds}l}
-  \mc{6}{M}{References that put conjugate $\conj$ on $\rvy$:}
-  \\&\imark&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &=& E\brb{\rvx(m)\rvy^\ast(0)}
-  \\&\imark&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &=& E\brs{\rvx(m)\rvy^\ast(0)}
-  \\&\imark&\citeP{matlab_xcorr} & R_{xy}(m) &=& E\setn{x_{n+m}y_n^\ast}
-  \\&\imark&\citeP{matlab_cpsd}  & R_{xy}(m) &=& E\setn{x_{n+m}y_n^\ast}
-  \\
-  \mc{6}{M}{References that put conjugate $\conj$ on $\rvx$:}
-  \\&\imark&\citerpg{kay1988}{52}{8131733564}       & r_{xy}[m] &=& \mathcal{E}\brb{x^\ast[0]y[m]}
-  \\&\imark&\citerpg{weisstein2002}{594}{1420035223}\footnotemark& f\star g  &=& \int_{-\infty}^{\infty}\bar{f}(\tau)g(t+\tau)\dtau
-  \\
-  \mc{6}{M}{References that use no conjugate $\conj$:}
-  \\&\imark&\citerpg{bendat2011}{111}{1118210824}   & R_{xy}(m)            &=& E\brs{\rvx(0)\rvy(m)}
-  \\&\imark&\citerpg{helstrom1991}{369}{0023535717} & \Rxy(t_1,t_2)        &=& E[\rvx(t_1)\rvy(t_2)]
-  \\&\imark&\citerpg{proakis1996}{A4}{0133737624}   & \gamma_{xy}(t_1,t_2) &=& E(X_{t_1}Y_{t_2})
-  \\&\imark&\citerpg{shin2008}{280}{0470725648}     & R_{xy}(\tau)         &=& E[x(t)y(t+\tau)]
-  \\&\imark&\citerpg{bracewell1978}{46}{007007013X}\footnotemark & g^\ast\star h  &=& \int_{-\infty}^{\infty}g^\ast(u)h(u+x)\du   %{Pentagram notation for cross correlation}
-\end{array}$
-\addtocounter{footnote}{-2}
-\footnotetext{
-  Bracewell and Weisstein here use the \ope{integral operator} $\int_{\R}\!\dx$ rather than the 
-  \ope{expectation operator} $\pE$. 
-  That is, they use a \ope{time average} rather than an \ope{ensemble average}. 
-  But in essence, the two types of operators are ``the same" because both types represent
-  \ope{inner product}s. 
-  That is, $\int_{x\in\R}\ff(x)\fg^\ast(x)\dx\eqd\inprod{\ff(x)}{\fg(x)}_1$ and
-  $\pE\brs{\rvx(t)\rvy^\ast(t)}\eqd\inprod{\rvx(t)}{\rvy(t)}_2$
-  (both are inner products, but operate in perpendicular orientations across the ensemble plane).
-  }
-\stepcounter{footnote}
-\footnotetext{
-  Note that Bracewell's ``\ope{Pentagram notation for cross correlation}"
-  $g^\ast\star h =\int_{-\infty}^{\infty}g^\ast(u)h(u+x)\du$ 
-  implies
-  $g\star h =\int_{-\infty}^{\infty}g(u)h(u+x)\du$ 
-  (and hence in the ``References that use no conjugate" category).
-  }
-Note the following:
-\begin{enumerate}
-\item Depending on how we define $\Rxy(m)$ we can get 8 different results for $\Swxy(\omega)$:\label{item:RxySwxy}
-\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
-    (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&( &\omega)\Swxx(\omega)
-  \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &( &\omega)\Swxx(\omega)
-  \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(-&\omega)\Swxx(\omega)
-  \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
-  \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &( &\omega)\Swxx(\omega)
-  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
-  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(-&\omega)\Swxx(\omega)
-  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh     &(-&\omega)\Swxx(\omega)
-\end{array}}
-
-
-\item The \ope{expectation} operator $\pE\brp{\rvX\rvY^\ast}$ is an \fncte{inner product}.
-As such, it would seem the most natural to follow the convention of other inner product definitions
-and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
-\\\indentx$\begin{array}{c>{\ds}rc>{\ds}l}
-    \imark & \inprod{\fx(t)}{\fy(t)} &\eqd& \int_{t\in\R} \fx(t)\fy^\conj(t) \dt
-  \\\imark & \inprod{\fx(n)}{\fy(n)} &\eqd& \sum_{n\in\Z} \fx(n)\fy^\conj(n)
-  \\\imark & \inprod{\rvX}{\rvY}     &\eqd& \pE\brp{\rvX\rvY^\conj}
-\end{array}$
-
-\item If we view $\Rxy(m)$ as an \ope{analysis} of $\rvy$ in terms of $\rvx$ 
-      (or as a \ope{projection} of $\rvy$ onto $\rvx$),
-      then it would seem more natural to put the conjugate on $\rvx$ (i.e. follow Kay).
-      This is what is done in Fourier analysis when projecting a function $\ff(t)$ onto the 
-      set of basis functions $\set{e^{i\omega n}}{\omega\in\R}$, as in 
-      \\\begin{align*}
-        \opDTFT\brs{\rvy[n]}(\omega) 
-          &\eqd \inprod{\rvy[n]}{e^{i\omega n}} 
-          && \text{(\ope{project} $\rvy[n]$ onto $e^{i\omega n}$ for some $\omega\in\R$)}
-        \\&\eqd \sum_{n\in\Z} \rvy[n] \brs{e^{+i\omega n}}^\ast
-        \\&\eqd \sum_{n\in\Z} \rvy[n] e^{-i\omega n}
-      \end{align*}
-      But arguably, a ``projection of $\rvy$ onto $\rvx$" would better be served by the use of $\Ryx(m)$ rather than $\Rxy(m)$.
-
-\item If we follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$.
-
-\item In the special case where $\rvx[n]$ and $\rvy[n]$ are \propb{real-valued} and by 
-      \prefpp{thm:dtft_conjneg_real}, \pref{item:RxySwxy} becomes
-\\\rembox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l@{\hspace{0pt}}l}
-    (1s).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
-  \\(2s).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
-  \\(3s).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
-  \\(4s).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
-  \\(5s).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
-  \\(6s).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
-  \\(7s).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\Fh     &(\omega)\Swxx(\omega)
-  \\(8s).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\Fh^\ast&(\omega)\Swxx(\omega)
-\end{array}}
-\end{enumerate}
-\end{remark}
-\begin{proof}
-\begin{enumerate}
-\item If we follow Papoulis $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy^\ast(0)}}$, then\ldots \label{item:Rxy_papoulis}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy^\ast(0)}
-      && \text{by Papoulis' definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k)\rvx(0-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\pE\brs{\rvx(m) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(0-k)}
-      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-      && \text{\xref{def:staralg}}
-    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(m)\rvx^\ast(0-k)}
-    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(-m-k)}
-      &&    \text{by \prope{wide sense stationary} property}
-    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \brp{\pE\brs{\rvx(-m-k)\rvx^\ast(0)}}^\ast
-    \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
-      && \text{by Papoulis' definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(-m) \convd \Rxx^\ast(-m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:conv}}
-    \\&=    \brs{\opDTFT\fh^\ast(-m)} \brs{\opDTFT\Rxx^\ast(-m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \Fh^\ast(\omega) \Swxx^\ast(\omega)
-      && \text{by \prefp{thm:dtft_conjneg}}
-    \\&= \Fh^\ast(\omega) \Swxx(\omega)
-      && \text{because $\Swxx(\omega)$ is \prope{real-valued}}
-  \end{align*}
-
-\item If we follow Kay $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy(m)}}$, then\ldots
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvy(m)\rvx^\ast(0)}
-      && \text{by Kay's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\brp{\fh(m)\convd\rvx(m)}\rvx^\ast(0)}
-      && \text{by \prope{LTI} property}
-      && \text{\xref{thm:conv}}
-    \\&=    \opDTFT\pE\brs{\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}\rvx^\ast(0)}
-    \\&=    \opDTFT\brp{\sum_{k\in\Z} \fh(k)\pE\brs{\rvx(m-k)\rvx^\ast(0)}}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&\eqd \opDTFT\brp{\sum_{k\in\Z} \fh(k)\Rxx(m-k)}
-      && \text{by Kay's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brp{\fh(m)\convd\Rxx(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:conv}}
-    \\&=    \brs{\opDTFT\fh(m)}\brs{\opDTFT\Rxx(m)}
-    \\&\eqd \Fh(\omega) \Swxx(\omega)
-      && \text{by definitions of $\Fh(\omega)$ and $\Swxx(\omega)$}
-      && \text{\xref{def:dtft}}
-  \end{align*}
-
-\item For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots \label{item:Rxy_ystarm}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy^\ast(m)}
-      && \text{by \pref{item:Rxy_ystarm} definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)\rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\pE\brs{\rvx(0) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(m-k)}
-      && \text{by \prope{distributive} property of \structd{$\invo$-algebra}s}
-      && \text{\xref{def:staralg}}
-    \\&=    \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(m-k)}
-    \\&\eqd \opDTFT        \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(m-k)
-      && \text{by \pref{item:Rxy_ystarm} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx^\ast(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:conv}}
-    \\&=    \brs{\opDTFT\fh^\ast(m)} \brs{\opDTFT\Rxx^\ast(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \Fh(\omega) \Swxx(\omega)
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
-  \end{align*}
-
-\item For x-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy(0)}}$ \ldots \label{item:Rxy_xstarm}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy(0)}
-      && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
-      && \text{by prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m)\rvx(0-k)}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\pE\brs{\rvx^\ast(m+k)\rvx(0)}
-      && \text{by \prope{wide sense stationary} property}
-      && \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k)\Rxx(m+k)
-      && \text{by \pref{item:Rxy_xstarm} definition of $\Rxy(m)$}
-    \\&=    \opDTFT\sum_{k'\in\Z} \fh(-k')\Rxx(m-k')
-      && \text{where $k'\eqd k$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:conv}}
-    \\&\eqd \brs{\opDTFT\fh(-m)} \brs{\opDTFT\Rxx(m)}
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
-    \\&\eqd \Fh(-\omega) \Swxx(\omega)
-      && \text{by \prefp{thm:dtft_conjneg}}
-  \end{align*}
-
-\item If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots \label{item:Rxy_bendat}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(0)\rvy(m)}
-      && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(m-k)}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(m-k)
-      && \text{by Bendat's definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(m) \convd \Rxx(m)}
-    \\&\eqd \Fh(\omega) \Swxx(\omega)
-  \end{align*}
-
-\item For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots \label{item:Rxy_bendatalt}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy(0)}
-      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k) \rvx(0-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m)\rvx(-k)}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
-      && \text{by \prope{wide sense stationary} property}
-      && \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
-      && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
-      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(-m)}
-      && \text{by definition of \ope{convolution} operation}
-      && \text{\xref{def:conv}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \Fh(-\omega) \Swxx(\omega)
-  \end{align*}
-
-\item For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots \label{item:Rxy_bendat-star}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-      && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
-      && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(m) \convd \Rxx(m)}
-    \\&\eqd \Fh^\ast(-\omega) \Swxx(\omega)
-  \end{align*}
-
-\item For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots \label{item:Rxy_bendatalt}
-  \begin{align*}
-    \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
-      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
-      && \text{by \prope{linearity} of $\sum$}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
-      && \text{by \prope{wide sense stationary} property}
-      && \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
-      && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
-      && \text{by \pref{item:Rxy_bendatalt} definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx^\ast(-m)}
-      && \text{by definition of \ope{convolution} operation}
-      && \text{\xref{def:conv}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \Fh(-\omega) \Swxx(\omega)
-  \end{align*}
-\end{enumerate}
-\end{proof}
 
 %=======================================
 \section{Whitening}
