--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1659,7 +1659,6 @@
 \newcommand{\Sww}    {\Sxx[ww]}
 
 \newcommand{\LSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Laplace spectral density
-\newcommand{\ZSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Z-domain spectral density
 \newcommand{\avgRxx} [1][xx] {\bar{R}_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\avgSxx} [1][xx] {\bar{S}_{\mathsfup{#1}}}  % spectral density
 
@@ -1691,13 +1690,8 @@
 \newcommand{\Syy}    {\Sxx[yy]}
 \newcommand{\Sphi}   {\Swxx[\phi\phi]}
 \newcommand{\Spsi}   {\Swxx[\psi\psi]}
-\newcommand{\Szphi}   {\Sxx[\phi\phi]}
-\newcommand{\Szpsi}   {\Sxx[\psi\psi]}
-\newcommand{\Szfg}   {\Sxx[fg]}
-\newcommand{\Szff}   {\Sxx[ff]}
 \newcommand{\LSphi}  {\LSxx[\phi\phi]}
 \newcommand{\LSyy}   {\LSxx[yy]}
-\newcommand{\ZSyy}   {\ZSxx[yy]}
 \newcommand{\Spp}    {\Sxx[pp]}
 \newcommand{\Sqq}    {\Sxx[qq]}
 \newcommand{\Sss}    {\Sxx[ss]}
@@ -1706,11 +1700,18 @@
 \newcommand{\Sxy} {\Sxx[xy]}  % Cross-correlation function
 \newcommand{\LSxy}{\LSxx[xy]} % Cross-correlation function
 \newcommand{\LSyx}{\LSxx[yx]} % Cross-correlation function
-\newcommand{\ZSxy}{\ZSxx[xy]} % Cross-correlation function
 \newcommand{\Syx} {\Sxx[yx]}
 \newcommand{\Spq} {\Sxx[pq]}
 \newcommand{\Sqp} {\Sxx[qp]}
 
+\newcommand{\ZSxx}   [1][xx] {\hat{S}_{\mathsfup{#1}}}  % Z-domain spectral density
+\newcommand{\ZSyy}   {\ZSxx[yy]}
+\newcommand{\ZSxy}   {\ZSxx[xy]} % Cross-correlation function
+\newcommand{\ZSyx}   {\ZSxx[yx]} % Cross-correlation function
+\newcommand{\Szphi}  {\ZSxx[\phi\phi]}
+\newcommand{\Szpsi}  {\ZSxx[\psi\psi]}
+\newcommand{\Szfg}   {\ZSxx[fg]}
+\newcommand{\Szff}   {\ZSxx[ff]}
 
 %--------------------------------------
 % Estimation theory
