more randseq development

--- a/common/normalg.tex
+++ b/common/normalg.tex
@@ -61,7 +61,7 @@ Let $\algA$ be an \structe{unital algebra} \xref{def:ualg} with unit $e$.
 %---------------------------------------
 \begin{definition}
 \footnote{
-  %\citerpg{folland1995}{1}{0849384907} \\
+  %\citerpg{folland1995}{1}{0849384907},
   \citerp{rickart1960}{178},
   \citeIpg{gelfand1964}{241}{0821820222}
   }
