--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -543,10 +543,59 @@ Let $\opZ$ be the \ope{Z-transform operator}\ifsxref{dsp}{def:opZ}.
 
 %---------------------------------------
 \begin{theorem}
+\label{thm:ZSxy_sym}
+%---------------------------------------
+Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
+\fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
+\thmbox{
+  \brb{\begin{array}{MD}
+    \mc{2}{M}{$\rvx$ and $\rvy$ are \prope{wide sense stationary}}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
+       (1).&\ZSxx(z) &=& \ZSxx^\ast\brp{\frac{1}{z^\ast}}             & and
+     \\(2).&\ZSyx(z) &=& \ZSxy^\ast\brp{\frac{1}{z^\ast}}             &
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \ZSyx(z)
+     &\eqd \opZ \Ryx(m)
+    && \text{by definition of $\ZSxy(z)$}
+    && \text{\xref{def:csd}}
+  \\&\eqd \sum_{m\in\Z} Ryx(m) z^{-m}
+    && \text{by definition of $\opZ$}
+    && \text{\xref{def:opZ}}
+  \\&\eqd \sum_{m\in\Z} \Rxy^\ast(-m) z^{-m}
+    && \text{by \prefp{cor:Rxym}}
+  \\&= \brs{\sum_{m\in\Z} \Rxy(-m) (z^\ast)^{-m}}^\ast
+  \\&= \brs{\sum_{-p\in\Z} \Rxy(p) (z^\ast)^{p}}^\ast
+    && \text{where $p\eqd -m$}
+    && \text{$\implies$ $m=-p$}
+  \\&= \brs{\sum_{p\in\Z} \Rxy(p) (z^\ast)^{p}}^\ast
+    && \text{by \prope{absolutely summable} property}
+    && \text{\xref{def:spllR}}
+  \\&= \brs{\sum_{p\in\Z} \Rxy(p) \brp{\frac{1}{z^\ast}}^{-p}}^\ast
+  \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by definition of $\opZ$}
+    && \text{\xref{def:opZ}}
+  \\
+  \ZSxx(z)
+    &= \brlr{\ZSxy(z)}_{\rvy=\rvx}
+  \\&= \brlr{\ZSyx^\ast(z)}_{\rvy=\rvx}
+  \\&= \brlr{\ZSxy^\ast\brp{\frac{1}{z^\ast}}}_{\rvy=\rvx}
+    && \text{by (2)---previous result}
+  \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}
 \footnote{
   \citerp{papoulis}{323}
   }
-\label{thm:Sxy}
+\label{thm:ZSxy}
 %---------------------------------------
 Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \fncte{input} $\rvx(n)$, and \fncte{output} $\rvy(n)$.
@@ -557,31 +606,14 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
   \end{array}}
   \implies
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-       (1).&\ZSyx(z) &=& \ZSxy^\ast\brp{\frac{1}{z^\ast}}             & and
-     \\(2).&\ZSxy(z) &=& \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
-     \\(3).&\ZSyy(z) &=& \ZSxy(z) \Zh(z)                              & and
-     \\(4).&\ZSyy(z) &=& \ZSxx(z) \abs{\Zh\brp{\frac{1}{z^\ast}}}^2
+       (1).&\ZSxy(z) &=& \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(2).&\ZSyy(z) &=& \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(3).&\ZSyy(z) &=& \ZSxx^\ast\brp{\frac{1}{z^\ast}} \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
   \end{array}}
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \ZSyx(z)
-     &\eqd \opZ \Ryx(m)
-    && \text{by definition of $\Sxy(z)$}
-    && \text{\xref{def:csd}}
-  \\&\eqd \sum_{m\in\Z} Ryx(m) z^{-m}
-    && \text{by definition of $\opZ$}
-    && \text{\xref{def:opZ}}
-  \\&\eqd \sum_{m\in\Z} Rxy^\ast(-m) z^{-m}
-    && \text{by \prefp{cor:Rxym}}
-  \\&= \brs{\sum_{m\in\Z} Rxy(-m) (z^\ast)^{-m}}^\ast
-  \\&= \brs{\sum_{-p\in\Z} Rxy(p) (z^\ast)^{p}}^\ast
-  \\&= \brs{\sum_{p\in\Z} Rxy(p) (z^\ast)^{p}}^\ast
-  \\&= \brs{\sum_{p\in\Z} Rxy(p) \brp{\frac{1}{z^\ast}}^{-p}}^\ast
-  \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}}
-    && \text{by \prefp{thm:opZ}}
-   \\
   \ZSxy(z)
      &\eqd \opZ \Rxy(m)
     && \text{by definition of $\Sxy(z)$}
@@ -597,29 +629,28 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    \\
   \ZSyy(z)
      &\eqd \opZ \Ryy(m)
-    && \text{by definition of $\Syy(z)$}
+    && \text{by definition of $\ZSyy(z)$}
     && \text{\xref{def:csd}}
    \\&= \opZ \brs{\Ryx(m) \convd \fh^\ast(-m)}
     && \text{by \prefp{cor:Rxyh}}
    \\&= \brs{\opZ\Ryx(m)}\,\opZ\brs{\fh^\ast(-m)}
     && \text{by \thme{convolution theorem}}
     && \text{\xref{thm:conv}}
-   \\&\eqd \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by \prefp{thm:opZ}}
    \\
    \\
   \ZSyy(z)
      &= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
      && \text{by previous result}
-   \\&= \ZSxy^\ast(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
-     && \text{by ???}
-   \\&= \brp{\ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}}^\ast  \Zh^\ast\brp{\frac{1}{z^\ast}}
-     && \text{by (1)}
-   \\&= \ZSxx^\ast(z) \Zh\brp{\frac{1}{z^\ast}}  \Zh^\ast\brp{\frac{1}{z^\ast}}
-     && \text{by (1)}
-   \\&= \ZSxx(z) \Zh\brp{\frac{1}{z^\ast}} \Zh^\ast\brp{\frac{1}{z^\ast}}
-     && \text{by ???}
-   \\&= \ZSxx(z) \abs{\Zh\brp{\frac{1}{z^\ast}}}^2
-     && \text{by property of complex numbers}
+     && \text{(2)}
+   \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}} \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by \prefp{thm:ZSxy_sym}}
+   \\&= \brs{ \ZSxx(z') \Zh^\ast\brp{\frac{1}{z'^\ast}} }^\ast_{z'=\frac{1}{z^\ast}} 
+        \Zh^\ast\brp{\frac{1}{z^\ast}}
+     && \text{by previous result}
+     && \text{(1)}
+   \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}} \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
 \end{align*}
 \end{proof}
 
@@ -645,21 +676,32 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \begin{proof}
 \begin{align*}
    \Swxy(\omega)
-     &= \brlr{\Sxy(z)}_{z=e^{i\omega}}
+     &= \brlr{\ZSxy(z)}_{z=e^{i\omega}}
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brlr{\Sxx(z)\Zh^\ast(z)}_{z=e^{i\omega}}
-     && \text{by \prefp{thm:Sxy}}
-   \\&= \Sxx\brp{e^{i\omega}}\Zh^\ast\brp{e^{-i\omega}}
-   \\&= \Swxx(\omega) \Fh^\ast(-\omega)
+   \\&= \brlr{\ZSxx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+     && \text{by \prefp{thm:ZSxy}}
+   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
+   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{e^{i\omega}}
+   \\&= \Swxx(\omega) \Fh^\ast(\omega)
+     && \text{by definition of \ope{DTFT}}
+     && \text{\xref{def:dtft}}
+   \\
+   \\
+   \\
+   \\
+   \\
+   \\
+   \\
+   \\
    \\
    \Swyy(\omega)
-     &= \brlr{\Syy(z)}_{z=e^{i\omega}}
+     &= \brlr{\ZSyy(z)}_{z=e^{i\omega}}
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brlr{\Sxy(z)\Zh(z)}_{z=e^{i\omega}}
-     && \text{by \prefp{thm:Sxy}}
-   \\&= \Sxy\brp{e^{i\omega}}\Zh\brp{e^{-i\omega}}
+   \\&= \brlr{\ZSxy(z)\Zh(z)}_{z=e^{i\omega}}
+     && \text{by \prefp{thm:ZSxy}}
+   \\&= \ZSxy\brp{e^{i\omega}}\Zh\brp{e^{-i\omega}}
    \\&= \Swxy(\omega) \Fh(\omega)
    \\
    \Swyy(\omega)
